chore: update Dockerfile to enable bash-completion

--- a/env/Dockerfile
+++ b/env/Dockerfile
@@ -13,8 +13,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     graphviz \
     libatlas-base-dev \
     openssh-client \
+    bash-completion \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# bash-completionを有効化
+RUN echo '\n# Enable bash-completion\nif [ -f /usr/share/bash-completion/bash_completion ]; then\n  . /usr/share/bash-completion/bash_completion\nelif [ -f /etc/bash_completion ]; then\n  . /etc/bash_completion\nfi' >> /etc/bash.bashrc
 
 # Python関連パッケージの更新
 COPY requirements.txt /tmp/requirements.txt
