fix: metadata.noteとdescriptionsのschemaを修正
descriptionが空のリストの場合をschemaレベルで許可するように修正
ただし、空のリストはValidator側でWarningが出るように

noteのschemaも空のリストを許可するように修正
ただしオブジェクトのリストは許可しないことを明確にし正常ケースの例も修正
用語の定義はtermsに移動

termsのschemaを追加
termsは空のリストを許可するが、Validator側でWarningが出るように設定
terms内のオブジェクトはnameとdescriptionsを必須とし、他のキーは許可するように設定

diff --git a/src/rtar_ddeps/validation/schemas/data_dependencies_schema.py b/src/rtar_ddeps/validation/schemas/data_dependencies_schema.py
index 977537d..8b8f3ca 100644
--- a/src/rtar_ddeps/validation/schemas/data_dependencies_schema.py
+++ b/src/rtar_ddeps/validation/schemas/data_dependencies_schema.py
@@ -17,7 +17,7 @@ ColumnSchema = Schema({

 # --- データ定義スキーマ ---
 DataSchema = Schema({
-    Required('descriptions'): NonEmptyListOfStrings, # 空リストは Validator 側で Warning
+    Required('descriptions'): PossiblyEmptyListOfStrings, # 空リストは Validator 側で Warning
     Required('format'): NonEmptyString, # 推奨値チェックは Validator 側で Warning
     Required('unit'): str, # `-` を許容
     Optional('columns'): [ColumnSchema], # format=table 時の必須/非空チェックは Validator 側 (Error)
@@ -28,14 +28,21 @@ DataSchema = Schema({

 # --- パラメータ定義スキーマ ---
 ParameterSchema = Schema({
-    Required('descriptions'): NonEmptyListOfStrings, # 空リストは Validator 側で Warning
+    Required('descriptions'): PossiblyEmptyListOfStrings, # 空リストは Validator 側で Warning
     Required('unit'): str, # `-` を許容
 }, extra=ALLOW_EXTRA)

+# --- 用語オブジェクトスキーマ ---
+TermObjectSchema = Schema({
+    Required('name'): NonEmptyString,
+    Required('descriptions'): PossiblyEmptyListOfStrings, # 空リストも許可
+}, extra=ALLOW_EXTRA) # name, descriptions 以外のキーも許容する場合
+
 # --- メタデータスキーマ ---
 MetadataSchema = Schema({
     Required('title'): NonEmptyString,
-    Required('purposes'): NonEmptyListOfStrings, # 空リストは Validator 側で Warning
+    Required('purposes'): PossiblyEmptyListOfStrings, # 空リストは Validator 側で Warning
+    Optional('terms'): [TermObjectSchema], # 空リストは Validator 側で Warning
     Optional('note'): PossiblyEmptyListOfStrings, 

--- a/tests/data/data_dependencies/error_terms.yml
+++ b/tests/data/data_dependencies/error_terms.yml
@@ -1,17 +1,14 @@
 # data_dependencies.yml (正常ケース例)
 metadata:
-  title: "センサーデータの前処理と統計量算出"
+  title: "termsのエラー"
   purposes:
     - "生センサーデータからノイズを除去し、整形する"
     - "整形済みデータから基本的な統計量を計算する"
     - "処理プロセスにおけるデータ依存関係を明確にする"
-  terms:
-    - name: "用語1"
-      descriptions:
-        - "用語1の説明"
-    - name: "用語2"
-      descriptions:
-        - "用語2の説明"
+  terms: # termsが規定の形式でない
+    - "生データ: センサーから取得した未処理のデータ"
+    - "整形済みデータ: 生データから異常値を除去し、単位を変換したデータ"
+    - "フィルタ適用済みデータ: 整形済みデータにフィルタを適用したもの"
   note:
     - "パラメータ 'filter_threshold' の値は実験的に決定される"
 
