feat: Implement data dependencies validation CLI
data_dependencies.ymlをバリデーションするCLIを実装
clickを使用して補完機能を追加

cli.py
- CLIのエントリーポイントを定義

pyproject.toml
- clickを依存関係に追加
- rtar-ddepsコマンドを定義
- rtar-ddeps validate data-dependencies <ファイルパス>で実行できるように

README.md
- CLIの使い方を追加
- data_dependencies.ymlの検証方法を追加
- シェル補完の設定方法を追加

devcontainer.json
- コンテナ起動時にrtar-ddepsを導入して、.bashrcに追記するように
- これにより、コンテナ起動後にrtar-ddepsを補完込みで使用できるようになる

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -59,5 +59,10 @@
     "mounts": [
         "source=${env:USERPROFILE}\\.gitconfig,target=/root/.gitconfig,type=bind,consistency=cached",
         "source=${env:USERPROFILE}\\.ssh,target=/root/.ssh,type=bind,consistency=cached",
-    ]
+    ],
+    // 起動時に自動的にrtar-ddepsを導入して、.bashrcに追記する
+    // これにより、コンテナ起動後にrtar-ddepsを補完込みで使用できるようになる
+    // ただし、.bashrcの変更はコンテナを再起動しないと反映されない
+    // そのため、コンテナ起動後に手動で.bashrcをソースする必要があることがある
+    "postStartCommand": "pip install -e . && grep -qxF 'eval \"$(_RTAR_DDEPS_COMPLETE=bash_source rtar-ddeps)\"' /root/.bashrc || echo 'eval \"$(_RTAR_DDEPS_COMPLETE=bash_source rtar-ddeps)\"' >> /root/.bashrc && sourse /root/.bashrc"
 }
