docs: 更新されたDataDependenciesルールに基づきエラールール等を修正
DataDependenciesの更新されたルール
https://github.com/sakashita44/rtar/pull/5
https://github.com/sakashita44/rtar/pull/6
* 不正なformat文字列の追加
* 可変長列数の取扱いの追加
* unitの推奨値の追加 (ただし自由な値を許可するため、必須ではない)

normal.yml (正常ケースのテストデータ) の修正
* formatの値を変更 (time_series -> table)等
* 可変長データの例を追加
* single, binary, document形式の例を追加
* その他主にunitに関して修正

error_rules.md (異常検出ルール)の修正
* 不正なformat文字列の追加
* 可変長データ定義エラーの追加
* その他、主に可読性向上のための修正

diff --git a/tests/data/data_dependencies/error_rules.md b/tests/data/data_dependencies/error_rules.md
index eeaa4ad..968f499 100644
--- a/tests/data/data_dependencies/error_rules.md
+++ b/tests/data/data_dependencies/error_rules.md
@@ -1,67 +1,82 @@
 # data_dependencies.ymlのバリデーションルール定義

-`data_dependencies.yml` 自体の記述ルールは[rtar-core/docs/rules/DataDependencies.md](https://github.com/sakashita44/rtar/blob/main/docs/rules/DataDependencies.md)を参照
+`data_dependencies.yml` 自体の記述ルールは <https://github.com/sakashita44/rtar/blob/main/docs/rules/DataDependencies.md> を参照.

 ## 検出対象とする異常系 (Error)

-バリデーションに失敗し、修正が必要な状態と判断するケースです。
+バリデーションに失敗し, 修正が必要な状態と判断するケース.

 ### 必須セクション/項目の不足

-* トップレベルの `metadata`, `target`, `data` のいずれかが欠落している。
-* `metadata` 内の `title` または `purposes` が欠落している。
-* `data` 内の各データ定義において、`descriptions`, `format`, `unit` のいずれかが欠落している。
-* `data` の定義で `format` が `"table"` と指定されている場合に、`columns` キー自体が欠落している。
-* `data.*.columns` 内の各カラム定義において、`name` または `description` が欠落している。
-* `parameter` セクションが存在する場合、その中の各パラメータ定義において `descriptions` または `unit` が欠落している。
+* トップレベルの `metadata`, `target`, `data` のいずれかが欠落.
+* `metadata` 内の `title` または `purposes` が欠落.
+* `data` 内の各データ定義において, `descriptions`, `format`, `unit` のいずれかが欠落.
+* `data` の定義で `format` が `"table"` と指定されている場合に, `columns` キー自体が欠落.
+* `data.*.columns` 内の各カラム定義において, `name` または `description` が欠落.
+* `parameter` セクションが存在する場合, その中の各パラメータ定義において `descriptions` または `unit` が欠落.

 ### データ型の不一致

-* YAML の各キーに対してルールで期待されるデータ型（文字列, リスト, 辞書など）と異なる型の値が指定されている。
-    * 例: `target` がリストではなく文字列、`da

--- a/tests/data/data_dependencies/normal.yml
+++ b/tests/data/data_dependencies/normal.yml
@@ -5,6 +5,7 @@ metadata:
     - "生センサーデータからノイズを除去し、整形する"
     - "整形済みデータから基本的な統計量を計算する"
     - "処理プロセスにおけるデータ依存関係を明確にする"
+    - "ユーザーごとの統計量を算出する"
   terms:
     - name: "用語1"
       descriptions:
@@ -17,6 +18,10 @@ metadata:
 
 target:
   - statistics_summary # 最終的に生成したいデータ
+  - user_specific_summary # 追加: 可変長データの例
+  - analysis_report # 追加: document 形式の例
+  - processed_image # 追加: binary 形式の例
+  - calculated_threshold # 追加: single 形式の例
 
 data:
   raw_sensor_data:
@@ -35,8 +40,8 @@ data:
   processed_data:
     descriptions:
       - "生データから異常フラグを除外し、単位を変換したデータ"
-    format: time_series
-    unit: "V" # mVからVに変換
+    format: table # 変更: time_series は table に含める
+    unit: "table" # mVからVに変換
     required_data:
       - raw_sensor_data
     required_parameter:
@@ -44,30 +49,114 @@ data:
     process:
       - "'raw_sensor_data' から 'status_flag' が 0 のレコードのみ抽出"
       - "'value_raw' 列に 'conversion_factor' を乗じて単位を V に変換"
-      - "'timestamp' 列と変換後の値で時系列データを作成"
+      - "'timestamp' 列と変換後の値でテーブルデータを作成" # 変更: 時系列データ -> テーブルデータ
+    columns:
+      - name: timestamp
+        description: "データ取得時刻 (ISO 8601形式)"
+      - name: value
+        description: "処理済みセンサー値 (V)"
 
   filtered_data:
     descriptions:
       - "整形済みデータにフィルタを適用したデータ"
-    format: time_series
-    unit: "V"
+    format: table
+    unit: "table"
     required_data:
       - processed_data
     required_parameter:
       - filter_threshold
     process:
       - "'processed_data' に対して、'filter_threshold' を用いて平滑化フィルタを適用"
+    columns:
+      - name: timestamp
+        description: "データ取得時刻 (ISO 8601形式)"
+      - name: value_filtered
+        description: "フィルタ適用済みセンサー値 (V)"
 
   statistics_summary:
     descriptions:
       - "フィルタ適用済みデータの基本的な統計量"
-    format: single # 単一の値や構造化データ（ここでは平均と標準偏差）
-    unit: "-" # 複数の単位を含むためハイフン
+    format: dictionary
+    unit: "mean:V, stddev: V" # 平均値と標準偏差の単位
     required_data:
       - filtered_data
     process:
       - "'filtered_data' の値の平均値と標準偏差を計算"
-      - "結果を構造化データとしてまとめる" # 例: {mean: X, stddev: Y}
+      - "結果を辞書データとしてまとめる (例: {'mean': X, 'stddev': Y})"
+
+  # --- 可変長データの例を追加 ---
+  user_ids:
+    descriptions:
+      - "解析対象のユーザーIDリスト"
+    format: list
+    unit: "-"
+    # 例: ['user001', 'user002', 'user003']
+
+  user_specific_summary:
+    descriptions:
+      - "ユーザーごとのフィルタ適用済みデータの統計量 (例: 平均値)"
+    format: table
+    unit: "table"
+    required_data:
+      - filtered_data
+      - user_ids # ユーザーIDリストに依存
+    process:
+      - "'filtered_data' をユーザーごとに分割 (別途ユーザー情報が必要と仮定)"
+      - "各ユーザーのデータについて平均値を計算"
+      - "結果を時間とユーザーIDを列とするテーブルにまとめる"
+    columns:
+      - name: timestamp # 例として時間軸も保持
+        description: "集計時刻 (ISO 8601形式)"
+      - name: user_ids* # 可変長列. 参照データは 'user_ids' (format: list)
+        description: "各ユーザーの統計値 (V)"
+        # key_source は不要 (参照データ user_ids の format が list のため)
+
+  # --- single 形式の例 ---
+  calculated_threshold:
+    descriptions:
+      - "統計量から計算された単一の閾値"
+    format: single
+    unit: "V" # 例: 統計量と同じ単位
+    required_data:
+      - statistics_summary
+    process:
+      - "'statistics_summary' の平均値と標準偏差から閾値を計算 (例: mean + 2*stddev)"
+
+  # --- binary 形式の例 ---
+  raw_image:
+    descriptions:
+      - "実験セットアップの画像データ"
+    format: binary
+    unit: "-" # 画像ファイル自体に単位はない
+    # required_data や process は状況に応じて定義
+
+  processed_image:
+    descriptions:
+      - "特定の領域を切り出した画像データ"
+    format: binary
+    unit: "-"
+    required_data:
+      - raw_image
+    required_parameter:
+      - roi_top
+      - roi_bottom
+      - roi_left
+      - roi_right
+    process:
+      - "'raw_image' から 'roi_top', 'roi_bottom', 'roi_left', 'roi_right' に基づいて関心領域を切り出す"
+
+  # --- document 形式の例 ---
+  analysis_report:
+    descriptions:
+      - "解析結果をまとめたレポートファイル (例: Markdown, PDF)"
+    format: document
+    unit: "-"
+    required_data:
+      - statistics_summary
+      - user_specific_summary
+      - processed_image # レポートに画像を含める場合
+    process:
+      - "各種解析結果をテンプレートに埋め込み、レポートファイルを生成する"
 
 parameter:
   conversion_factor:
@@ -79,3 +168,23 @@ parameter:
     descriptions:
       - "平滑化フィルタの閾値、またはカットオフ周波数など"
     unit: "-" # フィルタの種類によって単位が変わるため、ここではハイフン
+
+  roi_top: # 画像から切り出す関心領域の上端
+    descriptions:
+      - "関心領域 (Region of Interest) の上端の座標"
+    unit: "pixel"
+
+  roi_bottom: # 画像から切り出す関心領域の下端
+    descriptions:
+      - "関心領域 (Region of Interest) の下端の座標"
+    unit: "pixel"
+
+  roi_left: # 画像から切り出す関心領域の左端
+    descriptions:
+      - "関心領域 (Region of Interest) の左端の座標"
+    unit: "pixel"
+
+  roi_right: # 画像から切り出す関心領域の右端
+    descriptions:
+      - "関心領域 (Region of Interest) の右端の座標"
+    unit: "pixel"
