test: data_dependencies.ymlのエラーテストデータを追加
追加したテストデータ:
- error_empty_definition_more.yml
  - 空の data 辞書を持つテストデータ
- error_invalid_format.yml
  - 不正な format 文字列を持つテストデータ
- error_missing_required_more.yml
  - metadata, purposes, terms, note, descriptions, unit 欠落のテストデータ
- error_type_mismatch_more.yml
  - データ型不一致のテストデータ
- error_variable_columns.yml
  - 可変長データ定義のエラーテストデータ
- warning_empty_recommended_more.yml
  - 空の推奨項目を持つテストデータ
- warning_variable_columns.yml
  - 不適切な可変長データ参照を持つテストデータ

更新したテストデータ:
* 主にコメントの修正

--- a/tests/data/data_dependencies/error_duplicate_key.yml
+++ b/tests/data/data_dependencies/error_duplicate_key.yml
@@ -6,23 +6,23 @@ target:
   - data_a
 
 data:
-  data_a: # Error: 同じデータ名が複数定義されている
+  data_a: # Error: 同じデータ名 'data_a' が複数定義されている
     descriptions:
       - "データA (1回目)"
     format: single
     unit: "-"
-  data_a: # Error: 同じデータ名が複数定義されている
+  data_a: # Error: 同じデータ名 'data_a' が複数定義されている
     descriptions:
       - "データA (2回目)"
     format: single
     unit: "-"
 
 parameter:
-  param1: # Error: 同じパラメータ名が複数定義されている
+  param1: # Error: 同じパラメータ名 'param1' が複数定義されている
     descriptions:
       - "パラメータ1 (1回目)"
     unit: "-"
-  param1: # Error: 同じパラメータ名が複数定義されている
+  param1: # Error: 同じパラメータ名 'param1' が複数定義されている
     descriptions:
       - "パラメータ1 (2回目)"
     unit: "-"
