--- a/tests/data/data_dependencies/error_terms.yml
+++ b/tests/data/data_dependencies/error_terms.yml
@@ -5,7 +5,7 @@ metadata:
     - "生センサーデータからノイズを除去し、整形する"
     - "整形済みデータから基本的な統計量を計算する"
     - "処理プロセスにおけるデータ依存関係を明確にする"
-  terms: # termsが規定の形式でない
+  terms: # Error: 期待される型 list[dict] ではなく list[str]
     - "生データ: センサーから取得した未処理のデータ"
     - "整形済みデータ: 生データから異常値を除去し、単位を変換したデータ"
     - "フィルタ適用済みデータ: 整形済みデータにフィルタを適用したもの"
