--- a/tests/data/data_dependencies/error_circular_dependency.yml
+++ b/tests/data/data_dependencies/error_circular_dependency.yml
@@ -13,7 +13,7 @@ data:
     format: single
     unit: "-"
     required_data:
-      - data_b # Error: data_b に依存
+      - data_b # Error: 'data_b' に依存
 
   data_b:
     descriptions:
@@ -21,4 +21,4 @@ data:
     format: single
     unit: "-"
     required_data:
-      - data_a # Error: data_a に依存し、循環参照が発生
+      - data_a # Error: 'data_a' に依存し、循環参照が発生 (data_a -> data_b -> data_a)
