--- a/tests/data/data_dependencies/warning_empty_recommended.yml
+++ b/tests/data/data_dependencies/warning_empty_recommended.yml
@@ -1,14 +1,14 @@
 metadata:
   title: "推奨項目の空定義テスト (Warning)"
-  purposes: [] # Warning: purposes リストが空
-  terms: [] # Warning: terms リストが空
-  note: [] # Warning: note リストが空
+  purposes: [] # Warning: 'purposes' リストが空
+  terms: [] # Warning: 'terms' リストが空
+  note: [] # Warning: 'note' リストが空
 target:
   - data_c
 
 data:
   data_a:
-    descriptions: [] # Warning: descriptions リストが空
+    descriptions: [] # Warning: 'descriptions' リストが空
     format: single
     unit: "-"
   data_b:
@@ -16,8 +16,8 @@ data:
       - "データB"
     format: single
     unit: "-"
-    required_data: [] # Warning: required_data リストが空
-    required_parameter: [] # Warning: required_parameter リストが空
+    required_data: [] # Warning: 'required_data' リストが空
+    required_parameter: [] # Warning: 'required_parameter' リストが空
   data_c:
     descriptions:
       - "データC"
@@ -31,5 +31,5 @@ data:
 
 parameter:
   param1:
-    descriptions: [] # Warning: descriptions リストが空
+    descriptions: [] # Warning: 'descriptions' リストが空
     unit: "-"
