chore: update data_structure and data_dependencies
data_dependencies.ymlとdata_structure.ymlを更新

diff --git a/example/data_dependencies.yml b/example/data_dependencies.yml
index 35d3496..1eeb060 100644
--- a/example/data_dependencies.yml
+++ b/example/data_dependencies.yml
@@ -5,6 +5,7 @@ metadata:
     - "生センサーデータからノイズを除去し、整形する"
     - "整形済みデータから基本的な統計量を計算する"
     - "処理プロセスにおけるデータ依存関係を明確にする"
+    - "ユーザーごとの統計量を算出する"
   terms:
     - name: "用語1"
       descriptions:
@@ -17,23 +18,17 @@ metadata:

 target:
   - statistics_summary # 最終的に生成したいデータ
+  - user_specific_summary # 追加: 可変長データの例
+  - analysis_report # 追加: document 形式の例
+  - processed_image # 追加: binary 形式の例
+  - calculated_threshold # 追加: single 形式の例

 data:
-  uid:
-    descriptions:
-      - "試行のユニークID"
-    format: table
-    columns:
-      - name: uid
-        description: "試行のユニークID"
-      - name: trial_name
-        description: "試行名"
-
   raw_sensor_data:
     descriptions:
       - "センサーAから取得した生の時間変化データ"
     format: table
-    unit: "-"
+    unit: "table"
     columns:
       - name: timestamp
         description: "データ取得時刻 (ISO 8601形式)"
@@ -45,8 +40,8 @@ data:
   processed_data:
     descriptions:
       - "生データから異常フラグを除外し、単位を変換したデータ"
-    format: time_series
-    unit: "V" # mVからVに変換
+    format: table # 変更: time_series は table に含める
+    unit: "table" # mVからVに変換
     required_data:
       - raw_sensor_data
     required_parameter:
@@ -54,48 +49,119 @@ data:
     process:
       - "'raw_sensor_data' から 'status_flag' が 0 のレコードのみ抽出"
       - "'value_raw' 列に 'conversion_factor' を乗じて単位を V に変換"
-      - "'timestamp' 列と変換後の値で時系列データを作成"
+      - "'timestamp' 列と変換後の値でテーブルデータを作成" # 変更: 時系列データ -> テーブルデータ
+    columns:
+      - name: timestamp
+        description: "データ取得時刻 (ISO 8601形式)"
+      - name: value
+        description: "処理済みセンサー値 (V)"

   filtered_data:
     descriptions:
       - "整形済みデータにフィルタを適用したデータ"
-    format: time_series
-    unit: "V"
+    format: table
+    unit: "table"
     required_data:

--- a/example/data_structure.yml
+++ b/example/data_structure.yml
@@ -1,19 +1,11 @@
 placeholder:
-  "{A}": "Aの説明"
-  "{B}": "Bの説明"
+  "{A}": "subject_id"
+  "{B}": "trial_id"
 
 data:
-  uid:
-    path: "path/to/uid.csv"
-    layout: long
-    columns:
-      - name: uid
-        type: INTEGER
-      - name: trial_name
-        type: STRING
   raw_sensor_data:
-    path: "path/to/raw_sensor_data/a{A}b{B}.csv"
-    layout: "long"
+    path: "data/raw/sensor_data/{A}_{B}.csv"
+    layout: long
     columns:
       - name: timestamp
         type: DATETIME
@@ -22,42 +14,64 @@ data:
       - name: status_flag
         type: INTEGER
   processed_data:
-    path: "path/to/processed_data/a{A}b{B}.csv"
-    layout: "long"
+    path: "data/processed/processed_data/{A}_{B}.csv"
+    layout: long
     columns:
       - name: timestamp
         type: DATETIME
-      - name: value_processed
+      - name: value
         type: DOUBLE
   filtered_data:
-    path: "path/to/filtered_data/a{A}b{B}.csv"
-    layout: "long"
+    path: "data/processed/filtered_data/{A}_{B}.csv"
+    layout: long
     columns:
       - name: timestamp
         type: DATETIME
       - name: value_filtered
         type: DOUBLE
   statistics_summary:
-    path: "path/to/statistics_summary.csv"
+    path: "results/summary/statistics_summary.yml"
     layout: wide
-    columns:
+    keys:
       - name: mean
         type: DOUBLE
       - name: stddev
         type: DOUBLE
-  trial_data:
-    path: "path/to/trial_data.csv"
+  user_ids:
+    path: "data/config/user_ids.json"
+  user_specific_summary:
+    path: "results/summary/user_specific_summary.csv"
     layout: wide
     columns:
       - name: timestamp
         type: DATETIME
-      - name: uid* # *がつく場合, 特定のデータの値が入る(可変長になる)
-        type: INTEGER
+      - name: user_ids*
+        type: DOUBLE
+  calculated_threshold:
+    path: "results/values/calculated_threshold.txt"
+  raw_image:
+    path: "data/raw/image.png"
+  processed_image:
+    path: "data/processed/processed_image.png"
+  analysis_report:
+    path: "results/report/analysis_report.md"
 
 parameter:
   conversion_factor:
-    path: "path/to/params.yml"
+    path: "params/config.yml"
     type: DOUBLE
   filter_threshold:
-    path: "path/to/params.yml"
+    path: "params/config.yml"
     type: DOUBLE
+  roi_top:
+    path: "params/image_processing.yml"
+    type: INTEGER
+  roi_bottom:
+    path: "params/image_processing.yml"
+    type: INTEGER
+  roi_left:
+    path: "params/image_processing.yml"
+    type: INTEGER
+  roi_right:
+    path: "params/image_processing.yml"
+    type: INTEGER
